--- a/teacher.css
+++ b/teacher.css
@@ -24,6 +24,11 @@ body {
   box-shadow: 0px 0px 5px 2px black;
 }
 
+#home-page-link {
+  color: #3c4cff;
+  align-items: center;
+}
+
 #login-error-msg-holder {
   width: 100%;
   height: 100%;
