--- a/loginpage.css
+++ b/loginpage.css
@@ -10,12 +10,12 @@ body {
   display: grid;
   justify-items: center;
   align-items: center;
-  background-color: #3a3a3a;
+  background-color: #d1cccc;
 }
 
 #main-holder {
-  width: 50%;
-  height: 70%;
+  width: 80%;
+  height: 80%;
   display: grid;
   justify-items: center;
   align-items: center;
