login page creation success

--- a/template/login.html
+++ b/template/login.html
@@ -15,7 +15,7 @@
     {% extends "index.html" %}
     
     {% block content %}
-    <h2 id="login-header">Login</h2>
+    <h2 >Login</h2>
     <form action="" method="post" novalidate>
       {{ form.hidden_tag() }}
       <p>
