--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,7 @@
     <h1 id="login-header">Document Management System</h1>
     <div>
       Microblog:
-      <a href="/index">Home</a>
+      <a href="/">Home</a>
       <a href="/login">Login</a>
     </div>
     <hr>
