--- a/template/index.html
+++ b/template/index.html
@@ -13,9 +13,8 @@
   <main id="main-holder">
     <h1 id="login-header">Document Management System</h1>
     <div>
-      Microblog:
-      <a href="/">Home</a>
-      <a href="/login">Login</a>
+      <a href="{{ url_for('index') }}">Home</a>
+      <a href="{{ url_for('login') }}">Login</a>
     </div>
     <hr>
     {% with messages = get_flashed_messages() %}
