--- a/dmsv1/app/templates/user.html
+++ b/dmsv1/app/templates/user.html
@@ -15,4 +15,7 @@
         </tr>
     </table>
     <hr>
+    {% for post in posts %}
+        {% include '_post.html' %}
+    {% endfor %}
 {% endblock %}
