--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -20,15 +20,14 @@
         </p>
         <p class="login-form-field">
             {{ form.role.label }}<br>
-            <select style="padding:0px 13vw 0px 0px;">
+            <select style="padding: 2px 13vw 2px 2px;" name=role method="GET" action="/">
                 {% for role in roles %}
                 <option value="{{role}}" SELECTED>{{role}}</option>"
-                {% endfor %}<br>
+                {% endfor %}
             </select>
             {% for error in form.role.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+            <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-            
         </p>
         <p class="login-form-field" placeholder="Password">
             {{ form.password.label }}<br>
