--- a/app/templates/index - Copy.html
+++ b/app/templates/index - Copy.html
@@ -6,3 +6,4 @@
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
 {% endblock %}
+<iframe src="./files/19.pdf" width="100%" height="100%"></iframe>
